changed to the index made

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./photon.css" />
+    <link rel="stylesheet" href="./p.css" />
     <title>Photon</title>
   </head>
   <body>
     <header>
-      <h2><a id="logo" href="./index.html">Photo Web</a></h2>
+      <h2><a id="logo" href="./index.html">photon web</a></h2>
       <form class="search-form">
         <input type="text" name="search" class="search-input" />
         <button type="submit" class="submit-btn">Search</button>
