--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./p.css" />
+    <link rel="stylesheet" href="./photon.css" />
     <title>Photon</title>
   </head>
   <body>
